@@ -37,7 +37,7 @@ public class MetadataFieldValueRepositoryImpl
 
         final List<MetadataFieldValueRecord> records = pojos.stream()
             .map(this::pojoToRecord)
-            .collect(Collectors.toList());
+            .toList();
 
         InsertSetStep<MetadataFieldValueRecord> insertStep = dslContext.insertInto(recordTable);
 
